welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: reassignment to val
    if(die1==6){die1=1
                    ^withoutDoubles:5: error: reassignment to val
                die2=1}
                    ^withoutDoubles:6: error: reassignment to val
    else {die1=die1+1
              ^withoutDoubles:7: error: reassignment to val
          die2=die2+1}
              ^